tests/parser-test-files/bad-files/define-instance.7.coal
;; BAD: Parse Instance
(package test-package)

(define-instance)
